fix some dark mode styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,15 @@
   }
 
   main {
-    /* @apply text-lg; */
+    @apply md:text-lg;
+  }
+
+  a {
+    @apply text-sky-800 no-underline hover:text-sky-600 hover:underline dark:text-sky-500;
+  }
+
+  h1 {
+    @apply text-gray-700 dark:text-slate-300;
   }
 }
 
